--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,11 +27,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    buildFeatures {
-        dataBinding true
-    }
+//    buildFeatures {
+//        dataBinding true
+//    }
 }
-
+repositories {
+    jcenter()
+    google()
+}
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -42,6 +45,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
 
     implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
