--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.KittenDribbble">
-        <activity android:name=".RegisterActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+        android:supportsRtl="true">
+        <activity android:name=".RegisterActivity"
+            android:theme="@style/Theme.KittenRegister">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -28,8 +23,14 @@
                     android:scheme="kittencreativity" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
 
+        <activity android:name=".MainActivity"
+            android:theme="@style/Theme.KittenDribbbleMain">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
