--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:name=".RegisterActivity"
+        <activity
+            android:name=".RegisterActivity"
             android:theme="@style/Theme.KittenRegister">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -23,8 +24,8 @@
                     android:scheme="kittencreativity" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:theme="@style/Theme.KittenDribbbleMain">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
